[gd_scene load_steps=11 format=3 uid="uid://riso7tcpdvkd"]

[ext_resource type="PackedScene" uid="uid://derbvnf3o75e3" path="res://scenes/paddle.tscn" id="1_1o76a"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_r50lq"]
[ext_resource type="PackedScene" uid="uid://b8sy1nembnrqr" path="res://scenes/ball.tscn" id="2_2qnrl"]
[ext_resource type="PackedScene" uid="uid://cfn8blyrxykgl" path="res://scenes/wall.tscn" id="2_vq3ep"]
[ext_resource type="PackedScene" uid="uid://cpebc2lhjonxu" path="res://scenes/dead_zone.tscn" id="5_foabk"]
[ext_resource type="FontFile" uid="uid://c8441nf4opte8" path="res://fonts/PixelOperator8-Bold.ttf" id="6_wjm4u"]
[ext_resource type="AudioStream" uid="uid://nbxwuh53j4h0" path="res://sounds/point.wav" id="7_2iir6"]

[sub_resource type="LabelSettings" id="LabelSettings_hxp37"]
font = ExtResource("6_wjm4u")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_a23kn"]
font = ExtResource("6_wjm4u")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_pen0u"]
font = ExtResource("6_wjm4u")
font_size = 64

[node name="Game" type="Node2D" node_paths=PackedStringArray("lives", "score", "game_over")]
script = ExtResource("1_r50lq")
ball_scene = ExtResource("2_2qnrl")
block_scene = ExtResource("2_vq3ep")
lives = NodePath("Texts/Lives")
score = NodePath("Texts/Score")
game_over = NodePath("Message/GameOver")
colors = Array[Color]([Color(0.761716, 0.354746, 0.815898, 1), Color(0.0470588, 0.854902, 0.533333, 1), Color(0.933899, 0.679004, 0.168789, 1), Color(0.967298, 0.393894, 0.494952, 1)])

[node name="Player" parent="." instance=ExtResource("1_1o76a")]
position = Vector2(576, 608)

[node name="TopWall" parent="." instance=ExtResource("2_vq3ep")]
position = Vector2(576, 64)
rotation = 3.14159
scale = Vector2(30, 2)

[node name="LeftWall" parent="." instance=ExtResource("2_vq3ep")]
position = Vector2(0, 377)
rotation = 1.5708
scale = Vector2(15, 4)

[node name="RightWall" parent="." instance=ExtResource("2_vq3ep")]
position = Vector2(1152, 377)
rotation = 1.5708
scale = Vector2(15, 4)

[node name="BottomWall" parent="." instance=ExtResource("5_foabk")]
position = Vector2(576, 648)
monitorable = false

[node name="Blocks" type="Node2D" parent="."]

[node name="Texts" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 256.0
offset_right = 896.0
offset_bottom = 52.0

[node name="Lives" type="Label" parent="Texts"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 224.0
offset_bottom = 16.0
grow_vertical = 2
size_flags_horizontal = 0
text = "Lives: 3"
label_settings = SubResource("LabelSettings_hxp37")
vertical_alignment = 1

[node name="Score" type="Label" parent="Texts"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
text = "Score: 0"
label_settings = SubResource("LabelSettings_a23kn")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Message" type="CenterContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="GameOver" type="Label" parent="Message"]
visible = false
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_pen0u")

[node name="PointSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2iir6")
volume_db = -20.0

[node name="BackToMenu" type="Button" parent="."]
offset_right = 192.0
offset_bottom = 52.0
text = "Menu"

[node name="Reset" type="Button" parent="."]
offset_left = 960.0
offset_right = 1152.0
offset_bottom = 52.0
text = "Reset"

[connection signal="body_entered" from="BottomWall" to="." method="_on_bottom_wall_body_entered"]
[connection signal="pressed" from="BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
