[gd_scene load_steps=8 format=3 uid="uid://riso7tcpdvkd"]

[ext_resource type="PackedScene" uid="uid://derbvnf3o75e3" path="res://scenes/paddle.tscn" id="1_1o76a"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_r50lq"]
[ext_resource type="PackedScene" uid="uid://b8sy1nembnrqr" path="res://scenes/ball.tscn" id="2_2qnrl"]
[ext_resource type="PackedScene" uid="uid://cfn8blyrxykgl" path="res://scenes/wall.tscn" id="2_vq3ep"]
[ext_resource type="PackedScene" uid="uid://cpebc2lhjonxu" path="res://scenes/dead_zone.tscn" id="5_foabk"]
[ext_resource type="FontFile" uid="uid://c8441nf4opte8" path="res://fonts/PixelOperator8-Bold.ttf" id="6_wjm4u"]

[sub_resource type="LabelSettings" id="LabelSettings_a23kn"]
font = ExtResource("6_wjm4u")
font_size = 64

[node name="Game" type="Node2D"]
script = ExtResource("1_r50lq")
ball_scene = ExtResource("2_2qnrl")

[node name="Player 1" parent="." instance=ExtResource("1_1o76a")]
position = Vector2(47, 289)
move_up = &"Player 1 - Move up"
move_down = &"Player 1 - Move down"

[node name="Player 2" parent="." instance=ExtResource("1_1o76a")]
position = Vector2(1103, 289)
move_up = &"Player 2 - Move up"
move_down = &"Player 2 - Move down"

[node name="TopWall" parent="." instance=ExtResource("2_vq3ep")]
rotation = 3.14159

[node name="BottomWall" parent="." instance=ExtResource("2_vq3ep")]
position = Vector2(0, 648)

[node name="LeftWall" parent="." instance=ExtResource("5_foabk")]
rotation = 1.5708

[node name="RightWall" parent="." instance=ExtResource("5_foabk")]
position = Vector2(1152, 0)
rotation = -1.5708

[node name="Score" type="Label" parent="."]
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 323.0
offset_top = 184.0
offset_right = 803.0
offset_bottom = 415.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "1 : 2"
label_settings = SubResource("LabelSettings_a23kn")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="LeftWall" to="." method="_on_dead_zone_body_entered_left"]
[connection signal="body_entered" from="RightWall" to="." method="_on_dead_zone_body_entered_right"]
